--- a/templates/admin/gestionUsuarios.html
+++ b/templates/admin/gestionUsuarios.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="../../static/CSS/admin/gestionUsuarios.css">
 </head>
 <body>
+      <button class="mobile-menu-btn" id="mobileMenuBtn">
+        <i class="fas fa-bars"></i>
+    </button>
   <div class="layout">
 
     <!-- ========== SIDEBAR ========== -->
