--- a/templates/estudiante/config.html
+++ b/templates/estudiante/config.html
@@ -26,17 +26,13 @@
   
   <!-- NAVEGACIÓN PRINCIPAL -->
   <nav>
-  <a href="{{ url_for('student') }}" class="nav-item active" id="Inicio">
+  <a href="{{ url_for('home') }}" class="nav-item active" id="Inicio">
     <i class="fas fa-chart-line icon"></i>
     <span class="text">Inicio</span>
   </a>
   <a href="{{ url_for('diplomados') }}" class="nav-item" id="diplomados">
     <i class="fas fa-book icon"></i>
     <span class="text">Diplomados</span>
-  </a>
-  <a href="{{ url_for('progreso_semanal') }}" class="nav-item" id="tutorias">
-    <i class="fas fa-video icon"></i>
-    <span class="text">Mi progreso</span>
   </a>
   <a href="{{ url_for('pagos') }}" class="nav-item" id="pagos">
     <i class="fas fa-credit-card icon"></i>
