--- a/templates/admin/metricas.html
+++ b/templates/admin/metricas.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+      <button class="mobile-menu-btn" id="mobileMenuBtn">
+        <i class="fas fa-bars"></i>
+    </button>
   <div class="layout">
     <!-- ========== SIDEBAR ========== -->
     <aside class="sidebar" id="sidebar">
