--- a/templates/admin/reportes.html
+++ b/templates/admin/reportes.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../../static/CSS/admin/reportes.css">
 </head>
 <body>
+        <button class="mobile-menu-btn" id="mobileMenuBtn">
+        <i class="fas fa-bars"></i>
+    </button>
      <div class="layout">
     <!-- SIDEBAR -->
     <aside class="sidebar" id="sidebar">
