--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
                 <a href="#contacto" class="nav-link">Contacto</a>
             </div>
             <div class="nav-actions">
-              <a href="{{ url_for('login') }}" class="button">Iniciar sesión con Google</a>
+              <a href="{{ url_for('login') }}" class="button">Iniciar sesión</a>
             </div>
         
         </nav>
