--- a/templates/instructor/home.html
+++ b/templates/instructor/home.html
@@ -31,7 +31,7 @@
           <i class="fas fa-book icon"></i>
           <span class="text">Mis Diplomados</span>
         </a>
-<a href="{{ url_for('instructor.seguimiento_estudiantes') }}" class="nav-item active">
+    <a href="{{ url_for('instructor.seguimiento_estudiantes') }}" class="nav-item">
           <i class="fas fa-users icon"></i>
           <span class="text">Estudiantes</span>
         </a>
